--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <section id="about" class="section-padding">
     <div class="container">
       <div class="row">
-        <div class="col-12 text-center" data-aos="fade-down" data-aos-delay="40">
+        <div class="col-12 text-center" data-aos="fade-down">
           <div class="section-title">
             <h2 class="display-4 fw-semibold">About Us</h2>
             <div class="line"></div>
@@ -528,18 +528,23 @@
       </div>
       <div class="row justify-content-center">
         <div class="col-lg-8">
-          <form action="#" class="row g-3 p-lg-5 p-4 bg-white card-shadow">
+          <form action="#" class="row g-3 p-lg-5 p-4 bg-white card-shadow" method="POST" data-netlify="true"
+            data-netlify-recaptcha="true">
             <div class="form-group col-lg-6">
-              <input type="text" name="name" id="name" class="form-control" placeholder="Your Name">
+              <input type="text" name="name" id="name" class="form-control" placeholder="Your Name" required>
             </div>
             <div class="form-group col-lg-6">
-              <input type="email" name="phone" id="phone" class="form-control" placeholder="Phone Number">
+              <input type="email" name="phone" id="phone" class="form-control" placeholder="Phone Number" required>
             </div>
             <div class="form-group col-lg-12">
-              <input type="text" name="subject" id="subject" class="form-control" placeholder="Subject">
+              <input type="text" name="subject" id="subject" class="form-control" placeholder="Subject" required>
             </div>
             <div class="form-group col-lg-12">
-              <textarea name="message" id="message" rows="5" class="form-control" placeholder="Message"></textarea>
+              <textarea name="message" id="message" rows="5" class="form-control" placeholder="Message"
+                required></textarea>
+            </div>
+            <div class="mt-2 mb-2">
+              <div data-netlify-recaptcha="true"></div>
             </div>
             <div class="form-group col-lg-12 d-grid">
               <button class="btn btn-brand">Send Message</button>
