--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <!-- FancyBox CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css" />
   <!-- CSS -->
   <link rel="stylesheet" href="./assets/css/style.css">
   <title>Telecom, CCTV, Cabling and IT Solutions - Captial Technologies</title>
@@ -49,7 +51,7 @@
             <a class="nav-link" href="#services">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#clients">Clients</a>
+            <a class="nav-link" href="#image-gallery">Gallery</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#contact">Contact</a>
@@ -394,34 +396,133 @@
     </div>
   </div>
 
-  <!-- Clients -->
-  <section id="clients" class="section-padding">
+  <!-- Gallery -->
+  <section id="image-gallery" class="section-padding">
     <div class="container">
       <div class="row">
-        <div class="col-12 text-center" data-aos="fade-down" data-aos-delay="40">
+        <div class="col-12-lg text-center">
           <div class="section-title">
-            <h2 class="display-4 fw-semibold">Our Clients</h2>
+            <h2 class="display-4 fw-semibold">Gallery</h2>
             <div class="line"></div>
-            <p>Our Diverse Clientele Reflects the Trust Placed in Captial Technologies</p>
           </div>
         </div>
       </div>
-      <div class="row g-4 d-flex justify-content-between align-items-center">
-        <div class="col-lg-2 col-sm-2">
-          <img class="client-logo" src="./assets/images/logo2.png" alt="client logo">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="image-gallery-item image-zoom">
+            <div class="image-zoom-wrapper">
+              <img src="./assets/images/gallery1.jpg" alt="" class="w-100">
+            </div>
+            <a href="./assets/images/gallery1.jpg" data-fancybox="gallery" data-caption="Caption #2"
+              class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
+          </div>
+          <div class="image-gallery-item image-zoom mt-4">
+            <div class="image-zoom-wrapper">
+              <img src="./assets/images/gallery2.jpg" alt="" class="w-100">
+            </div>
+            <a href="./assets/images/gallery2.jpg" data-fancybox="gallery" data-caption="Caption #2"
+              class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
+          </div>
+          <div class="image-gallery-item image-zoom mt-4">
+            <div class="image-zoom-wrapper">
+              <img src="./assets/images/gallery3.jpg" alt="" class="w-100">
+            </div>
+            <a href="./assets/images/gallery3.jpg" data-fancybox="gallery" data-caption="Caption #2"
+              class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
+          </div>
+          <div class="image-gallery-item image-zoom mt-4">
+            <div class="image-zoom-wrapper">
+              <img src="./assets/images/gallery4.jpg" alt="" class="w-100">
+            </div>
+            <a href="./assets/images/gallery4.jpg" data-fancybox="gallery" data-caption="Caption #2"
+              class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
+          </div>
+          <div class="image-gallery-item image-zoom mt-4">
+            <div class="image-zoom-wrapper">
+              <img src="./assets/images/gallery5.jpg" alt="" class="w-100">
+            </div>
+            <a href="./assets/images/gallery5.jpg" data-fancybox="gallery" data-caption="Caption #2"
+              class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
+          </div>
         </div>
-        <div class="col-lg-2 col-sm-2">
-          <img class="client-logo" src="./assets/images/logo3.png" alt="client logo">
+        <div class="col-md-4">
+          <div class="image-gallery-item image-zoom">
+            <div class="image-zoom-wrapper">
+              <img src="./assets/images/gallery1.jpg" alt="" class="w-100">
+            </div>
+            <a href="./assets/images/gallery1.jpg" data-fancybox="gallery" data-caption="Caption #2"
+              class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
+          </div>
+          <div class="image-gallery-item image-zoom mt-4">
+            <div class="image-zoom-wrapper">
+              <img src="./assets/images/gallery2.jpg" alt="" class="w-100">
+            </div>
+            <a href="./assets/images/gallery2.jpg" data-fancybox="gallery" data-caption="Caption #2"
+              class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
+          </div>
+          <div class="image-gallery-item image-zoom mt-4">
+            <div class="image-zoom-wrapper">
+              <img src="./assets/images/gallery3.jpg" alt="" class="w-100">
+            </div>
+            <a href="./assets/images/gallery3.jpg" data-fancybox="gallery" data-caption="Caption #2"
+              class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
+          </div>
+          <div class="image-gallery-item image-zoom mt-4">
+            <div class="image-zoom-wrapper">
+              <img src="./assets/images/gallery4.jpg" alt="" class="w-100">
+            </div>
+            <a href="./assets/images/gallery4.jpg" data-fancybox="gallery" data-caption="Caption #2"
+              class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
+          </div>
+          <div class="image-gallery-item image-zoom mt-4">
+            <div class="image-zoom-wrapper">
+              <img src="./assets/images/gallery5.jpg" alt="" class="w-100">
+            </div>
+            <a href="./assets/images/gallery5.jpg" data-fancybox="gallery" data-caption="Caption #2"
+              class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
+          </div>
         </div>
-        <div class="col-lg-2 col-sm-2">
-          <img class="client-logo" src="./assets/images/logo4.png" alt="client logo">
-        </div>
-        <div class="col-lg-2 col-sm-2">
-          <img class="client-logo" src="./assets/images/logo5.png" alt="client logo">
+        <div class="col-md-4">
+          <div class="image-gallery-item image-zoom">
+            <div class="image-zoom-wrapper">
+              <img src="./assets/images/gallery1.jpg" alt="" class="w-100">
+            </div>
+            <a href="./assets/images/gallery1.jpg" data-fancybox="gallery" data-caption="Caption #2"
+              class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
+          </div>
+          <div class="image-gallery-item image-zoom mt-4">
+            <div class="image-zoom-wrapper">
+              <img src="./assets/images/gallery2.jpg" alt="" class="w-100">
+            </div>
+            <a href="./assets/images/gallery2.jpg" data-fancybox="gallery" data-caption="Caption #2"
+              class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
+          </div>
+          <div class="image-gallery-item image-zoom mt-4">
+            <div class="image-zoom-wrapper">
+              <img src="./assets/images/gallery3.jpg" alt="" class="w-100">
+            </div>
+            <a href="./assets/images/gallery3.jpg" data-fancybox="gallery" data-caption="Caption #2"
+              class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
+          </div>
+          <div class="image-gallery-item image-zoom mt-4">
+            <div class="image-zoom-wrapper">
+              <img src="./assets/images/gallery4.jpg" alt="" class="w-100">
+            </div>
+            <a href="./assets/images/gallery4.jpg" data-fancybox="gallery" data-caption="Caption #2"
+              class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
+          </div>
+          <div class="image-gallery-item image-zoom mt-4">
+            <div class="image-zoom-wrapper">
+              <img src="./assets/images/gallery5.jpg" alt="" class="w-100">
+            </div>
+            <a href="./assets/images/gallery5.jpg" data-fancybox="gallery" data-caption="Caption #2"
+              class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
+          </div>
         </div>
       </div>
     </div>
   </section>
+
 
   <!-- Testimonials -->
   <section id="testimonials" class="section-padding bg-light">
@@ -515,7 +616,7 @@
   </section>
 
   <!-- Contact -->
-  <section id="contact" class="section-padding ">
+  <section id="contact" class="section-padding">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center" data-aos="fade-down" data-aos-delay="40">
@@ -531,10 +632,10 @@
           <form action="#" class="row g-3 p-lg-5 p-4 bg-white card-shadow" method="POST" data-netlify="true"
             data-netlify-recaptcha="true">
             <div class="form-group col-lg-6">
-              <input type="text" name="name" id="name" class="form-control" placeholder="Your Name" required>
+              <input type="text" name="name" id="name" class="form-control" placeholder="Name" required>
             </div>
             <div class="form-group col-lg-6">
-              <input type="email" name="phone" id="phone" class="form-control" placeholder="Phone Number" required>
+              <input type="email" name="email" id="email" class="form-control" placeholder="Email" required>
             </div>
             <div class="form-group col-lg-12">
               <input type="text" name="subject" id="subject" class="form-control" placeholder="Subject" required>
@@ -554,6 +655,7 @@
       </div>
     </div>
   </section>
+
 
   <!-- Footer -->
   <footer class="bg-dark">
@@ -624,6 +726,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
+  <!-- FancyBox JS -->
+  <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
   <!-- JS -->
   <script src="./assets/js/main.js"></script>
 </body>
