fixed image gallery grid

--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row g-4">
         <div class="col-md-4">
           <div class="image-gallery-item image-zoom">
             <div class="image-zoom-wrapper">
@@ -445,7 +445,7 @@
               class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 mt-4">
           <div class="image-gallery-item image-zoom">
             <div class="image-zoom-wrapper">
               <img src="./assets/images/gallery1.jpg" alt="" class="w-100">
@@ -482,7 +482,7 @@
               class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 mt-4">
           <div class="image-gallery-item image-zoom">
             <div class="image-zoom-wrapper">
               <img src="./assets/images/gallery1.jpg" alt="" class="w-100">
