added images in gallery section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     content="telecommunications, CCTV, FTTH, cabling, IT solutions, connectivity, technology, captial technologies">
   <meta name="description"
     content="Explore advanced telecommunications, CCTV, FTTH, cabling, and IT solutions with Captial Technologies. Elevate your connectivity and technology experience today.">
-  <meta name="robots" content="index, follow">
   <!-- AOS -->
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <!-- Remix Icons CSS -->
@@ -27,16 +26,15 @@
 
 <body data-bs-spy="scroll" data-bs-target=".navbar">
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg sticky-top" style="background-color: #138989;">
+  <nav class="navbar navbar-expand-lg fixed-top" style="background-color: #138989;">
     <div class=" container">
       <a class="navbar-brand" href="#">
         <span class="nav-brand">
           <img src="./assets/images/main-logo.png" alt="logo" class="nav-logo"> Capital Technologies
         </span>
       </a>
-      <button class="navbar-toggler " style="border: none;" type="button" data-bs-toggle="collapse"
-        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-        aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -407,7 +405,7 @@
           </div>
         </div>
       </div>
-      <div class="row g-4">
+      <div class="row g-3">
         <div class="col-md-4">
           <div class="image-gallery-item image-zoom">
             <div class="image-zoom-wrapper">
@@ -416,106 +414,169 @@
             <a href="./assets/images/gallery1.jpg" data-fancybox="gallery" data-caption="Caption #2"
               class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
           </div>
-          <div class="image-gallery-item image-zoom mt-4">
-            <div class="image-zoom-wrapper">
-              <img src="./assets/images/gallery2.jpg" alt="" class="w-100">
-            </div>
-            <a href="./assets/images/gallery2.jpg" data-fancybox="gallery" data-caption="Caption #2"
-              class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
-          </div>
-          <div class="image-gallery-item image-zoom mt-4">
-            <div class="image-zoom-wrapper">
-              <img src="./assets/images/gallery3.jpg" alt="" class="w-100">
-            </div>
-            <a href="./assets/images/gallery3.jpg" data-fancybox="gallery" data-caption="Caption #2"
-              class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
-          </div>
-          <div class="image-gallery-item image-zoom mt-4">
+          <div class="image-gallery-item image-zoom mt-3">
             <div class="image-zoom-wrapper">
               <img src="./assets/images/gallery4.jpg" alt="" class="w-100">
             </div>
             <a href="./assets/images/gallery4.jpg" data-fancybox="gallery" data-caption="Caption #2"
               class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
           </div>
-          <div class="image-gallery-item image-zoom mt-4">
+          <div class="image-gallery-item image-zoom mt-3">
             <div class="image-zoom-wrapper">
-              <img src="./assets/images/gallery5.jpg" alt="" class="w-100">
+              <img src="./assets/images/gallery7.jpeg" alt="" class="w-100">
             </div>
-            <a href="./assets/images/gallery5.jpg" data-fancybox="gallery" data-caption="Caption #2"
+            <a href="./assets/images/gallery7.jpeg" data-fancybox="gallery" data-caption="Caption #2"
+              class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
+          </div>
+          <div class="image-gallery-item image-zoom mt-3">
+            <div class="image-zoom-wrapper">
+              <img src="./assets/images/gallery10.jpeg" alt="" class="w-100">
+            </div>
+            <a href="./assets/images/gallery10.jpeg" data-fancybox="gallery" data-caption="Caption #2"
+              class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
+          </div>
+          <div class="image-gallery-item image-zoom mt-3">
+            <div class="image-zoom-wrapper">
+              <img src="./assets/images/gallery13.jpeg" alt="" class="w-100">
+            </div>
+            <a href="./assets/images/gallery13.jpeg" data-fancybox="gallery" data-caption="Caption #2"
+              class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
+          </div>
+          <div class="image-gallery-item image-zoom mt-3">
+            <div class="image-zoom-wrapper">
+              <img src="./assets/images/gallery16.jpeg" alt="" class="w-100">
+            </div>
+            <a href="./assets/images/gallery16.jpeg" data-fancybox="gallery" data-caption="Caption #2"
+              class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
+          </div>
+          <div class="image-gallery-item image-zoom mt-3">
+            <div class="image-zoom-wrapper">
+              <img src="./assets/images/gallery19.jpeg" alt="" class="w-100">
+            </div>
+            <a href="./assets/images/gallery19.jpeg" data-fancybox="gallery" data-caption="Caption #2"
+              class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
+          </div>
+          <div class="image-gallery-item image-zoom mt-3">
+            <div class="image-zoom-wrapper">
+              <img src="./assets/images/gallery22.jpeg" alt="" class="w-100">
+            </div>
+            <a href="./assets/images/gallery22.jpeg" data-fancybox="gallery" data-caption="Caption #2"
               class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
           </div>
         </div>
-        <div class="col-md-4 mt-4">
+        <div class="col-md-4">
           <div class="image-gallery-item image-zoom">
-            <div class="image-zoom-wrapper">
-              <img src="./assets/images/gallery1.jpg" alt="" class="w-100">
-            </div>
-            <a href="./assets/images/gallery1.jpg" data-fancybox="gallery" data-caption="Caption #2"
-              class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
-          </div>
-          <div class="image-gallery-item image-zoom mt-4">
             <div class="image-zoom-wrapper">
               <img src="./assets/images/gallery2.jpg" alt="" class="w-100">
             </div>
             <a href="./assets/images/gallery2.jpg" data-fancybox="gallery" data-caption="Caption #2"
               class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
           </div>
-          <div class="image-gallery-item image-zoom mt-4">
+          <div class="image-gallery-item image-zoom mt-3">
             <div class="image-zoom-wrapper">
-              <img src="./assets/images/gallery3.jpg" alt="" class="w-100">
+              <img src="./assets/images/gallery5.png" alt="" class="w-100">
             </div>
-            <a href="./assets/images/gallery3.jpg" data-fancybox="gallery" data-caption="Caption #2"
+            <a href="./assets/images/gallery5.png" data-fancybox="gallery" data-caption="Caption #2"
               class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
           </div>
-          <div class="image-gallery-item image-zoom mt-4">
+          <div class="image-gallery-item image-zoom mt-3">
             <div class="image-zoom-wrapper">
-              <img src="./assets/images/gallery4.jpg" alt="" class="w-100">
+              <img src="./assets/images/gallery8.jpg" alt="" class="w-100">
             </div>
-            <a href="./assets/images/gallery4.jpg" data-fancybox="gallery" data-caption="Caption #2"
+            <a href="./assets/images/gallery8.jpg" data-fancybox="gallery" data-caption="Caption #2"
               class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
           </div>
-          <div class="image-gallery-item image-zoom mt-4">
+          <div class="image-gallery-item image-zoom mt-3">
             <div class="image-zoom-wrapper">
-              <img src="./assets/images/gallery5.jpg" alt="" class="w-100">
+              <img src="./assets/images/gallery11.jpeg" alt="" class="w-100">
             </div>
-            <a href="./assets/images/gallery5.jpg" data-fancybox="gallery" data-caption="Caption #2"
+            <a href="./assets/images/gallery11.jpeg" data-fancybox="gallery" data-caption="Caption #2"
+              class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
+          </div>
+          <div class="image-gallery-item image-zoom mt-3">
+            <div class="image-zoom-wrapper">
+              <img src="./assets/images/gallery14.jpeg" alt="" class="w-100">
+            </div>
+            <a href="./assets/images/gallery14.jpeg" data-fancybox="gallery" data-caption="Caption #2"
+              class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
+          </div>
+          <div class="image-gallery-item image-zoom mt-3">
+            <div class="image-zoom-wrapper">
+              <img src="./assets/images/gallery17.jpeg" alt="" class="w-100">
+            </div>
+            <a href="./assets/images/gallery17.jpeg" data-fancybox="gallery" data-caption="Caption #2"
+              class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
+          </div>
+          <div class="image-gallery-item image-zoom mt-3">
+            <div class="image-zoom-wrapper">
+              <img src="./assets/images/gallery20.jpeg" alt="" class="w-100">
+            </div>
+            <a href="./assets/images/gallery20.jpeg" data-fancybox="gallery" data-caption="Caption #2"
+              class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
+          </div>
+          <div class="image-gallery-item image-zoom mt-3">
+            <div class="image-zoom-wrapper">
+              <img src="./assets/images/gallery23.jpeg" alt="" class="w-100">
+            </div>
+            <a href="./assets/images/gallery23.jpeg" data-fancybox="gallery" data-caption="Caption #2"
               class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
           </div>
         </div>
-        <div class="col-md-4 mt-4">
+        <div class="col-md-4">
           <div class="image-gallery-item image-zoom">
             <div class="image-zoom-wrapper">
-              <img src="./assets/images/gallery1.jpg" alt="" class="w-100">
+              <img src="./assets/images/gallery3.png" alt="" class="w-100">
             </div>
-            <a href="./assets/images/gallery1.jpg" data-fancybox="gallery" data-caption="Caption #2"
+            <a href="./assets/images/gallery3.png" data-fancybox="gallery" data-caption="Caption #2"
               class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
           </div>
-          <div class="image-gallery-item image-zoom mt-4">
+          <div class="image-gallery-item image-zoom mt-3">
             <div class="image-zoom-wrapper">
-              <img src="./assets/images/gallery2.jpg" alt="" class="w-100">
+              <img src="./assets/images/gallery6.jpg" alt="" class="w-100">
             </div>
-            <a href="./assets/images/gallery2.jpg" data-fancybox="gallery" data-caption="Caption #2"
+            <a href="./assets/images/gallery6.jpg" data-fancybox="gallery" data-caption="Caption #2"
               class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
           </div>
-          <div class="image-gallery-item image-zoom mt-4">
+          <div class="image-gallery-item image-zoom mt-3">
             <div class="image-zoom-wrapper">
-              <img src="./assets/images/gallery3.jpg" alt="" class="w-100">
+              <img src="./assets/images/gallery9.png" alt="" class="w-100">
             </div>
-            <a href="./assets/images/gallery3.jpg" data-fancybox="gallery" data-caption="Caption #2"
+            <a href="./assets/images/gallery9.png" data-fancybox="gallery" data-caption="Caption #2"
               class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
           </div>
-          <div class="image-gallery-item image-zoom mt-4">
+          <div class="image-gallery-item image-zoom mt-3">
             <div class="image-zoom-wrapper">
-              <img src="./assets/images/gallery4.jpg" alt="" class="w-100">
+              <img src="./assets/images/gallery12.jpeg" alt="" class="w-100">
             </div>
-            <a href="./assets/images/gallery4.jpg" data-fancybox="gallery" data-caption="Caption #2"
+            <a href="./assets/images/gallery12.jpeg" data-fancybox="gallery" data-caption="Caption #2"
               class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
           </div>
-          <div class="image-gallery-item image-zoom mt-4">
+          <div class="image-gallery-item image-zoom mt-3">
             <div class="image-zoom-wrapper">
-              <img src="./assets/images/gallery5.jpg" alt="" class="w-100">
+              <img src="./assets/images/gallery15.jpeg" alt="" class="w-100">
             </div>
-            <a href="./assets/images/gallery5.jpg" data-fancybox="gallery" data-caption="Caption #2"
+            <a href="./assets/images/gallery15.jpeg" data-fancybox="gallery" data-caption="Caption #2"
+              class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
+          </div>
+          <div class="image-gallery-item image-zoom mt-3">
+            <div class="image-zoom-wrapper">
+              <img src="./assets/images/gallery18.jpeg" alt="" class="w-100">
+            </div>
+            <a href="./assets/images/gallery18.jpeg" data-fancybox="gallery" data-caption="Caption #2"
+              class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
+          </div>
+          <div class="image-gallery-item image-zoom mt-3">
+            <div class="image-zoom-wrapper">
+              <img src="./assets/images/gallery21.jpeg" alt="" class="w-100">
+            </div>
+            <a href="./assets/images/gallery21.jpeg" data-fancybox="gallery" data-caption="Caption #2"
+              class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
+          </div>
+          <div class="image-gallery-item image-zoom mt-3">
+            <div class="image-zoom-wrapper">
+              <img src="./assets/images/gallery24.jpeg" alt="" class="w-100">
+            </div>
+            <a href="./assets/images/gallery24.jpeg" data-fancybox="gallery" data-caption="Caption #2"
               class="image-zoom-icon"><i class="ri-search-2-line"></i></a>
           </div>
         </div>
